tests/NormalTests/paczka2/big_fuzzy/39910370.err
Error in line 6: g1s46YBU S310 94,0
Error in line 4: n8tdxB S310 85,7
Error in line 19: g1s46YBU S391 64,6
Error in line 16: qwaLHo9Bs A400 78,3
Error in line 21: 7i48SafEIO S391 66,4
Error in line 39: g1s46YBU S310 2,8
Error in line 30: n8tdxB S391 156,2
Error in line 42: 8YJxfCzeuCK A52 -4,8
Error in line 34: 8YJxfCzeuCK A52 53,5
Error in line 44: 8YJxfCzeuCK S310 85,6
Error in line 50: qwaLHo9Bs A52 60,0
Error in line 59: 8YJxfCzeuCK S391 38,7
Error in line 54: n8tdxB S391 93,7
Error in line 90: S31 S31 0,2
Error in line 92: S391 S391 336,4
Error in line 119: nVMV A52 37,0
Error in line 126: nVMV S310 85,3
Error in line 146: qwaLHo9Bs A400 95,6
Error in line 150: 7i48SafEIO A52 271,6
Error in line 152: n8tdxB A52 90,3
Error in line 149: qwaLHo9Bs A52 22,6
Error in line 153: 7i48SafEIO S391 12,1
Error in line 154: n8tdxB A400 88,8
Error in line 174: S391 Ai00 272,1
Error in line 178: g1s46YBU S310 7,6
Error in line 179: S391 S310 36,8
Error in line 185: 7i48SafEIO A400 41,0
Error in line 189: g1s46YBU A52 17,7
Error in line 197: g1s46YBU S310 49,1
Error in line 214: n8tdxB A400 86,6
Error in line 215: qwaLHo9Bs A400 86,6
Error in line 211: nVMV A52 38,3
Error in line 228: S391 A52 42,8
Error in line 245: n8tdxB S391 70,3
Error in line 239: nVMV A52 59,7
